syntax = "proto3";

option csharp_namespace = "RoomticaGrpcServiceBackEnd";

package pago;

import "google/protobuf/empty.proto";

service PagoService {
    rpc GetAll(google.protobuf.Empty) returns (Pagos);
    rpc GetById(PagoId) returns (Pago);
    rpc Create(Pago) returns (Pago);
    rpc Update(Pago) returns (Pago);
    rpc Delete(PagoId) returns (google.protobuf.Empty);
}

message Pago {
    int32 id = 1;
    int32 id_reserva = 2;
    int32 id_tipo_comprobante = 3;
    double igv = 4;
    double total_pago = 5;
    string fecha_emision = 6;
    string fecha_pago = 7;
    bool estado = 8;
}

message Pagos {
    repeated Pago pagos = 1;
}

message PagoId {
    int32 id = 1;
}
